Add login/signup, change styles, add menu navDrawer
- Add login and sign up functionalities, making the layouts
fully functional
- Change styles to use AppCompat instead of Material and make
some minor syntax changes
- Create the main menu Activity with a Navigation Drawer already customized

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,25 @@
 <resources>
     <string name="app_name">Assignment1</string>
+
+    <string-array name="titles">
+        <item>username here</item>
+        <item>Home</item>
+        <item>Medicines</item>
+        <item>Nearest Doctors</item>
+        <item>Settings</item>
+    </string-array>
+
+    <string-array name="medicines">
+        <item>NoisyBelly</item>
+        <item>Tylenol</item>
+    </string-array>
+
+    <string name="user_name">Joao Francisco</string>
+
+    <string name="title_activity_main">Menu</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
