Add login error, Add logged in check, UI Adjustments, new Main Style
- Using the Toast widget, shows error message when trying to log in with wrong informations and success message when succesful.
- Checks if the user has already loged in and automatically changes the activity.
- Now uses ScrollView together with LinearLayout to make the login/signup screens more smooth and user-friendly. Now also impedes the auto focus on the EditTexts. Some other minor changes to design to make it better looking.
- The new main style now is the same as the last one but without the ActionBar. This was changed because every activity until now don't/can't use it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Assignment1</string>
 
+    <string name="prefence_file_key">com.example.joaofbsm.assignment1.preferences</string>
+
     <string-array name="titles">
         <item>username here</item>
         <item>Home</item>
