Add logout, Change Icons to VectorDrawable, Changes in NavDrawer, Minor settings changes
- The app now have a fully functional logout function present in the navigation drawer.
- Lots of design changes in the navigation drawer. New icons and options.
- Most icons now are VectorDrawables.
- The MainActivity is the main activity now, and checks/redirects to the Login activity if necessary.
- The NoAction style now inherits directly from AppCompat Theme. A change was made on the v21 styles, so the Status Bar keeps opaque. Had some trouble trying to change the MainActivity Title because of "<item name="windowNoTitle">true</item>", but figured it out.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Assignment1</string>
+    <string name="app_name">AskDrApp</string>
 
     <string name="prefence_file_key">com.example.joaofbsm.assignment1.preferences</string>
 
@@ -16,9 +16,7 @@
         <item>Tylenol</item>
     </string-array>
 
-    <string name="user_name">Joao Francisco</string>
-
-    <string name="title_activity_main">Menu</string>
+    <string name="user_name">Default</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
